2009-01-05  Roland McGrath  <roland@redhat.com>

	* run-dwarfcmp-self.sh: New file.
	* Makefile.am (TESTS): Add it.

2008-12-31  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for dppd, dpps, insertps, movntdqa,
	mpsadbw, packusdw, pblendvb, pblendw, pcmpeqq, pcmpestri, pcmpestrm,
	pcmpistri, pcmpistrm, pcmpgtq, phminposuw, pinsrb, pinsrd, pmaxsb,
	pmaxsd, pmaxud, pmaxuw, pminsb, pminsd, pminud, pminuw, pmovsxbw,
	pmovsxbd, pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmovsxbw, pmovsxbd,
	pmovsxbq, pmovsxwd, pmovsxwq, pmovsxdq, pmuldq, pmulld, popcnt, ptest,
	roundss, roundps, roundpd, and roundsd.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

	* testfile44.S.bz2: Add tests for blendvpd and blendvps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-12-30  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for blendpd and blendps.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-12-19  Ulrich Drepper  <drepper@redhat.com>

	* testfile44.S.bz2: Add tests for AMD 3DNOW.
	* testfile45.S.bz2: Likewise.
	* testfile44.expect.bz2: Adjust accordingly.
	* testfile45.expect.bz2: Likewise.

2008-11-26  Roland McGrath  <roland@redhat.com>

	* dwfl-bug-getmodules.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(dwfl_bug_getmodules_LDADD): New variable.

2008-09-10  Roland McGrath  <roland@redhat.com>

	* test-subr.sh (LC_ALL): Export it set to "C".
	* run-dwfl-addr-sect.sh: Don't do it here.
	* run-strings-test.sh: Likewise.

2008-08-21  Denys Vlasenko  <dvlasenk@redhat.com>

	* run-addrname-test.sh: Add a new case.
	* testfile49.bz2: New data file.
	* Makefile.am (EXTRA_DIST): Add it.

2008-04-10  Roland McGrath  <roland@redhat.com>

	* testfile48.bz2, testfile48.bz2.debug: New data files.
	* Makefile.am (EXTRA_DIST): Add them.